Update Ruby, add brew packages

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -6,3 +6,8 @@ tap "homebrew/core"
 brew "rbenv"
 brew "ruby-build"
 brew "rbenv-gemset"
+brew "cmake"
+brew "imagemagick@6"
+brew "pkg-config"
+brew "node@8"
+brew "yarn"
